--- a/Main.html
+++ b/Main.html
@@ -7,25 +7,25 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 </head>
-<body style="background-color:  #339af0">
+<body style="background-color:  navy">
 
     <div style="height: 140px;width: 100%;background-color: white">
         <img src="Brookfield+LOGO+clear+copyico.png">
-       <a href="#"><h3 style="float: right;color: dodgerblue;margin-right: 120px;margin-top: 60px">Contact Us</h3></a>
-        <a href="#"><h3 style="float: right;color: dodgerblue;margin-right: 90px;margin-top: 60px">Home</h3></a>
-        <a href="#"><h3 style="float: right;color: dodgerblue;margin-right: 100px;margin-top: 60px">Admin</h3></a>
-    </div>
-<b>
-<p style="font-size: 70px;margin-top: 350px;text-align: center">
-  Brookfield School is a<br>
-     positive learning<br>
-    community, encouraging<br>
-    and guiding students to<br>
-    pursue and develop to<br> their fullest potential.</b>
-</p>
+        <b style="margin-right: 160px;font-size: 50px;color: white">BrookField School</b>
 
-    <div style="height: 170px;width: 100%;background-color: white">
     </div>
+
+    <h4 style="float: right;margin-right: 440px;margin-top: -70px"><a href="#" style="text-decoration: none">Home</a></h4>
+    <h4 style="float: right;margin-right: 260px;margin-top: -70px"><a href="#" style="text-decoration: none">Parents Portal</a></h4>
+    <h4 style="float: right;margin-right: 160px;margin-top: -70px"><a href="#" style="text-decoration: none">Admin</a></h4>
+    <h4 style="float: right;margin-right: 20px;margin-top: -70px"><a href="#" style="text-decoration: none">Contact Us</a></h4>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <img src="pic.png" height="400px" width="100%">
+    <img src="b.png" height="450px" width="100%"><br><br>
+    <img src="c.png" height="450px" width="100%">
+
+
+
 
 
 
