main page is added

--- a/Main.html
+++ b/Main.html
@@ -15,13 +15,13 @@
 
     </div>
 
-    <h4 style="float: right;margin-right: 440px;margin-top: -70px"><a href="#" style="text-decoration: none">Home</a></h4>
-    <h4 style="float: right;margin-right: 260px;margin-top: -70px"><a href="#" style="text-decoration: none">Parents Portal</a></h4>
-    <h4 style="float: right;margin-right: 160px;margin-top: -70px"><a href="#" style="text-decoration: none">Admin</a></h4>
-    <h4 style="float: right;margin-right: 20px;margin-top: -70px"><a href="#" style="text-decoration: none">Contact Us</a></h4>
+    <a href="Main.html"><h4 style="float: right;margin-right: 400px;margin-top: -70px">Home</h4></a>
+    <h4 style="float: right;margin-right: 260px;margin-top: -70px"><a href="#" style="text-decoration: none">Contact Us</a></h4>
+    <h4 style="float: right;margin-right: 170px;margin-top: -70px"><a href="Login.php" style="text-decoration: none">Admin</a></h4>
+    <h4 style="float: right;margin-right: 8px;margin-top: -70px"><a href="#" style="text-decoration: none">Parents Portal</a></h4>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <img src="pic.png" height="400px" width="100%">
-    <img src="b.png" height="450px" width="100%"><br><br>
+    <img src="b.png" height="450px" width="100%">
     <img src="c.png" height="450px" width="100%">
 
 
