Insert Student pages added

--- a/Main.html
+++ b/Main.html
@@ -5,9 +5,25 @@
     <title>BrookField International School</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <style>
 
+        .navbar li{
+            float: right;
+            list-style: none;
+            color: white;
+
+        }
+
+        .navbar li a{
+            padding: 5px;
+            list-style: none;
+            color: white;
+            margin-right: 35px;
+            text-decoration: none;
+        }
+    </style>
 </head>
-<body style="background-color:  navy">
+<body style="background-color:  #000080">
 
     <div style="height: 140px;width: 100%;background-color: white">
         <img src="Brookfield+LOGO+clear+copyico.png">
@@ -15,12 +31,21 @@
 
     </div>
 
-    <a href="Main.html"><h4 style="float: right;margin-right: 400px;margin-top: -70px">Home</h4></a>
-    <h4 style="float: right;margin-right: 260px;margin-top: -70px"><a href="#" style="text-decoration: none">Contact Us</a></h4>
-    <h4 style="float: right;margin-right: 170px;margin-top: -70px"><a href="Login.php" style="text-decoration: none">Admin</a></h4>
-    <h4 style="float: right;margin-right: 8px;margin-top: -70px"><a href="#" style="text-decoration: none">Parents Portal</a></h4>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <img src="pic.png" height="400px" width="100%">
+    <header>
+        <nav class="navbar">
+            <ul>
+                <li><h4><a href="#">Faculty</a></h4></li>
+                <li><h4><a href="#">Contact Us</a></h4></li>
+                <li><h4><a href="Login.php">Admin</a></h4></li>
+                <li><h4><a href="#">Parental Portal</a></h4></li>
+                <li><h4><a href="Main.html">Home</a></h4></li>
+
+            </ul>
+
+        </nav>
+    </header>
+    <img src="main.jpg" height="400px" width="100%">
     <img src="b.png" height="450px" width="100%">
     <img src="c.png" height="450px" width="100%">
 
