delete operation has been added

--- a/Admin.html
+++ b/Admin.html
@@ -38,12 +38,13 @@
   <nav class="navbar">
     <ul>
       <li><a href="#">Teachers</a></li>
-      <li><a href="#">Students</a></li>
+      <li><a href="Insert_Student.html">Students</a></li>
       <li><a href="#">Parents</a></li>
       <li><a href="#">Results</a></li>
       <li><a href="#">Classes</a></li>
 
     </ul>
+    <a href="Main.html" style="float: right;color: white;text-decoration: none;font-size: 25px">Log Out</a>
 
   </nav>
 </header>
