--- a/Insert_Student.html
+++ b/Insert_Student.html
@@ -22,14 +22,17 @@
               <label  style="color: darkgreen"><h6 style="color: black">Name</h6></label><br>
               <input type="text" name="Name"  class="form-control" placeholder="Ali" id="name" >
               <label  style="color: darkgreen"><h6 style="color: black">Address</h6></label><br>
-              <input type="text" name="Address"  class="form-control" id="address" >
+              <input type="text" name="Address"  class="form-control" id="address" placeholder="LDA AVENUE 1 LAHORE">
               <label  style="color: darkgreen"><h6 style="color: black">Date of Admission</h6></label><br>
               <input type="date" name="Date"  class="form-control" id="date" >
             </div>
 
             <div class="form-group">
               <input type="submit" name="submit" class="btn btn-success" value="Insert" onclick="checkEmpty()">
-              <a href="Admin.html"><input type="button" class="btn badge-secondary" style="float: right" value="Back"></a><hr>
+              <a href="Admin.html"><input type="button" class="btn badge-secondary" style="float: right" value="Back"></a><br><br>
+              <a href="delete_students.html"><input type="button" class="btn btn-danger" style="float: left" value="Delete"></a>
+              <a href="Admin.html"><input type="button" class="btn badge-secondary" style="float: right" value="Update"></a>
+              <a href="Admin.html"><input type="button" class="btn badge-dark" style="text-align: center;margin-left: 200px" value="View "></a><hr>
 
             </div>
 
