update operation has been added

--- a/Insert_Student.html
+++ b/Insert_Student.html
@@ -31,8 +31,8 @@
               <input type="submit" name="submit" class="btn btn-success" value="Insert" onclick="checkEmpty()">
               <a href="Admin.html"><input type="button" class="btn badge-secondary" style="float: right" value="Back"></a><br><br>
               <a href="delete_students.html"><input type="button" class="btn btn-danger" style="float: left" value="Delete"></a>
-              <a href="Admin.html"><input type="button" class="btn badge-secondary" style="float: right" value="Update"></a>
-              <a href="Admin.html"><input type="button" class="btn badge-dark" style="text-align: center;margin-left: 200px" value="View "></a><hr>
+              <a href="update-students.html"><input type="button" class="btn badge-secondary" style="float: right" value="Update"></a>
+              <a href="view_students.php"><input type="button" class="btn badge-dark" style="text-align: center;margin-left: 200px" value="View "></a><hr>
 
             </div>
 
