Teacher record has been added

--- a/Admin.html
+++ b/Admin.html
@@ -37,11 +37,11 @@
 <header>
   <nav class="navbar">
     <ul>
-      <li><a href="#">Teachers</a></li>
+      <li><a href="Insert_Teacher.html">Teachers</a></li>
       <li><a href="Insert_Student.html">Students</a></li>
       <li><a href="#">Parents</a></li>
       <li><a href="#">Results</a></li>
-      <li><a href="#">Classes</a></li>
+      <li><a href="insert_class.html">Classes</a></li>
 
     </ul>
     <a href="Main.html" style="float: right;color: white;text-decoration: none;font-size: 25px">Log Out</a>
