Teacher Login has been added

--- a/Insert_Teacher.html
+++ b/Insert_Teacher.html
@@ -37,7 +37,7 @@
                         </div>
 
                         <a href="updateAttendance.html"><input type="button" class="btn badge-dark"  value="Update"></a>
-                        <a href="view_inter_emp.php"><input type="button" class="btn badge-dark"  value="View" style="float: right"></a>
+                        <a href="view-Teachers.php"><input type="button" class="btn badge-dark"  value="View" style="float: right"></a>
 
                     </form>
                 </div>
