--- a/Main.html
+++ b/Main.html
@@ -35,7 +35,7 @@
     <header>
         <nav class="navbar">
             <ul>
-                <li><h4><a href="#">Faculty</a></h4></li>
+                <li><h4><a href="facultyLogin.php">Faculty</a></h4></li>
                 <li><h4><a href="#">Contact Us</a></h4></li>
                 <li><h4><a href="Login.php">Admin</a></h4></li>
                 <li><h4><a href="#">Parental Portal</a></h4></li>
@@ -45,7 +45,7 @@
 
         </nav>
     </header>
-    <img src="main.jpg" height="400px" width="100%">
+    <img src="main.jpg" height="600px" width="100%">
     <img src="b.png" height="450px" width="100%">
     <img src="c.png" height="450px" width="100%">
 
