--- a/Admin.html
+++ b/Admin.html
@@ -39,8 +39,8 @@
     <ul>
       <li><a href="Insert_Teacher.html">Teachers</a></li>
       <li><a href="Insert_Student.html">Students</a></li>
-      <li><a href="#">Parents</a></li>
-      <li><a href="#">Results</a></li>
+      <li><a href="insert_Parents.html">Parents</a></li>
+      <li><a href="view_results.php">Results</a></li>
       <li><a href="insert_class.html">Classes</a></li>
 
     </ul>
