--- a/Main.html
+++ b/Main.html
@@ -38,7 +38,7 @@
                 <li><h4><a href="facultyLogin.php">Faculty</a></h4></li>
                 <li><h4><a href="#">Contact Us</a></h4></li>
                 <li><h4><a href="Login.php">Admin</a></h4></li>
-                <li><h4><a href="#">Parental Portal</a></h4></li>
+                <li><h4><a href="Parent_Login.php">Parental Portal</a></h4></li>
                 <li><h4><a href="Main.html">Home</a></h4></li>
 
             </ul>
