--- a/Update_Results.html
+++ b/Update_Results.html
@@ -9,13 +9,13 @@
 </head>
 <body class="badge-dark">
 
-<div id="login"><br><br>
+<div id="login"><br><br><br>
   <h3 class="text-center text-white pt-5" style="color: cornflowerblue">Students Result Portal</h3>
   <div class="container">
     <div id="login-row" class="row justify-content-center align-items-center">
       <div id="login-column" class="col-md-6">
         <div id="login-box" class="col-md-12">
-          <form id="login-form" class="form" action="add_Result.php" method="post">
+          <form id="login-form" class="form" action="update_results.php" method="post">
             <div class="form-group">
               <label  style="color: ghostwhite;">Registration Number:</label><br>
               <input type="text" name="Reg"  class="form-control" placeholder="John" id="reg">
@@ -35,12 +35,10 @@
               </select>
             </div>
             <div class="form-group">
-              <input type="submit" name="submit" class="btn btn-success" value="Insert">
-              <a href="Main.html"><input type="button" class="btn btn-success" style="float: right" value="Back"></a>
+              <input type="submit" name="submit" class="btn btn-success" value="Update">
+              <a href="Result.html"><input type="button" class="btn btn-success" style="float: right" value="Back"></a>
             </div>
 
-            <a href="Update_Results.html"><input type="button" class="btn btn-success"  value="Update"></a>
-            <a href="view_results.php"><input type="button" class="btn btn-success"  value="View" style="float: right"></a>
 
           </form>
         </div>
