--- a/Insert_Teacher.html
+++ b/Insert_Teacher.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>International Employees</title>
+    <title>Teachers</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
@@ -36,7 +36,7 @@
                             <a href="Admin.html"><input type="button" class="btn badge-dark" style="float: right" value="Back"></a>
                         </div>
 
-                        <a href="updateAttendance.html"><input type="button" class="btn badge-dark"  value="Update"></a>
+                        <a href="update_Teachers.html"><input type="button" class="btn badge-dark"  value="Update"></a>
                         <a href="view-Teachers.php"><input type="button" class="btn badge-dark"  value="View" style="float: right"></a>
 
                     </form>
