--- a/Admin.html
+++ b/Admin.html
@@ -1,61 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Admin Page</title>
+    <meta charset="UTF-8" />
+    <title>Admin Page</title>
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <style>
-
-         .navbar li{
-           float: right;
-           list-style: none;
-           color: white;
-
-         }
-
-         .navbar li a{
-           padding: 5px;
-           list-style: none;
-           color: white;
-           margin-right: 15px;
-           font-size: 25px;
-           text-decoration: none;
-
-         }
-  </style>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+    <style>
+        .navbar li {
+            float: right;
+            list-style: none;
+            color: white;
+        }
+        
+        .navbar li a {
+            padding: 5px;
+            list-style: none;
+            color: white;
+            margin-right: 15px;
+            font-size: 25px;
+            text-decoration: none;
+        }
+    </style>
 </head>
-<body style="background-color:  #000080">
 
-<div style="height: 140px;width: 100%;background-color: white">
-  <img src="Brookfield+LOGO+clear+copyico.png">
-  <b style="margin-right: 160px;font-size: 50px;color: white">BrookField School</b>
+<body style="background-color: #000080">
+    <div style="height: 140px; width: 100%; background-color: white">
+        <img src="Brookfield+LOGO+clear+copyico.png" />
+        <b style="margin-right: 160px; font-size: 50px; color: white">BrookField School</b
+      >
+    </div>
 
-</div>
-
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<header>
-  <nav class="navbar">
-    <ul>
-      <li><a href="Insert_Teacher.html">Teachers</a></li>
-      <li><a href="Insert_Student.html">Students</a></li>
-      <li><a href="insert_Parents.html">Parents</a></li>
-      <li><a href="view_results.php">Results</a></li>
-      <li><a href="insert_class.html">Classes</a></li>
-
-    </ul>
-    <a href="Main.html" style="float: right;color: white;text-decoration: none;font-size: 25px">Log Out</a>
-
-  </nav>
-</header>
-<img src="Header-Teacher.jpg" height="700px" width="100%">
-<img src="b.png" height="450px" width="100%">
-<img src="c.png" height="450px" width="100%">
-
-
-
-
-
-
-</body>
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+    <header>
+      <nav class="navbar">
+        <ul>
+          <li><a href="Insert_Teacher.html">Teachers</a></li>
+          <li><a href="Insert_Student.html">Students</a></li>
+          <li><a href="insert_Parents.html">Parents</a></li>
+          <li><a href="view_results.php">Results</a></li>
+          <li><a href="insert_class.html">Classes</a></li>
+        </ul>
+        <a
+          href="Main.html"
+          style="
+            float: right;
+            color: white;
+            text-decoration: none;
+            font-size: 25px;
+          "
+          >Log Out</a
+        >
+      </nav>
+    </header>
+    <img src="Header-Teacher.jpg" height="700px" width="100%" />
+    <img src="b.png" height="450px" width="100%" />
+    <img src="c.png" height="450px" width="100%" />
+  </body>
 </html>
