--- a/update_Teachers.html
+++ b/update_Teachers.html
@@ -1,58 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>International Employees</title>
+    <meta charset="UTF-8" />
+    <title>International Employees</title>
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
 </head>
-<body style="background-image: url('Header-Teacher.jpg');background-repeat: no-repeat;background-attachment: fixed;background-size: cover">
 
-<div id="login"><br><br>
-  <h1 class="text-center text-black pt-10" >Update Teachers</h1>
-  <div class="container">
-    <div id="login-row" class="row justify-content-center align-items-center">
-      <div id="login-column" class="col-md-6">
-        <div id="login-box" class="col-md-12">
-          <form id="login-form" class="form" action="update_Teachers.php" method="post">
-            <div class="form-group">
-              <label  style="color: ghostwhite">Teacher ID:</label><br>
-              <input type="text" name="id"  class="form-control" id="id">
-              <label  style="color: ghostwhite;">Full Name:</label><br>
-              <input type="text" name="Name"  class="form-control" placeholder="John Rick" id="name">
-              <label  style="color: ghostwhite">Password:</label><br>
-              <input type="password" name="password"  class="form-control" id="password">
-              <label  style="color: ghostwhite">Salary:</label>
-              <input type="number" name="salary"  class="form-control" id="salary" >
-              <label  style="color: ghostwhite">Designation:</label>
-              <input type="text" name="designation"  class="form-control" id="designation">
+<body style="
+      background-image: url('Header-Teacher.jpg');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+    ">
+    <div id="login">
+        <br /><br />
+        <h1 class="text-center text-black pt-10">Update Teachers</h1>
+        <div class="container">
+            <div id="login-row" class="row justify-content-center align-items-center">
+                <div id="login-column" class="col-md-6">
+                    <div id="login-box" class="col-md-12">
+                        <form id="login-form" class="form" action="update_Teachers.php" method="post">
+                            <div class="form-group">
+                                <label style="color: ghostwhite">Teacher ID:</label><br />
+                                <input type="text" name="id" class="form-control" id="id" />
+                                <label style="color: ghostwhite">Full Name:</label><br />
+                                <input type="text" name="Name" class="form-control" placeholder="John Rick" id="name" />
+                                <label style="color: ghostwhite">Password:</label><br />
+                                <input type="password" name="password" class="form-control" id="password" />
+                                <label style="color: ghostwhite">Salary:</label>
+                                <input type="number" name="salary" class="form-control" id="salary" />
+                                <label style="color: ghostwhite">Designation:</label>
+                                <input type="text" name="designation" class="form-control" id="designation" />
+                            </div>
+                            <div class="form-group">
+                                <input type="submit" name="submit" class="btn badge-dark" value="Update" onclick="checkEmpty()" />
+                                <a href="Insert_Teacher.html"><input type="button" class="btn badge-dark" style="float: right" value="Back" /></a>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-              <input type="submit" name="submit" class="btn badge-dark" value="Update" onclick="checkEmpty()">
-              <a href="Insert_Teacher.html"><input type="button" class="btn badge-dark" style="float: right" value="Back"></a>
-            </div>
-          </form>
         </div>
-      </div>
     </div>
-  </div>
-</div>
 
-<script type="text/javascript">
-  function checkEmpty(){
-    let v=document.getElementById("designation").value;
-    let w=document.getElementById("name").value;
-    let x=document.getElementById("id").value;
-    let y =document.getElementById("password").value;
-    let z =document.getElementById("salary").value;
-    if(x=='' || y=='' || z==''){
-      alert("User Id/Password must not be empty");
-    }
-    location.reload();
-  }
-</script>
-
-
+    <script type="text/javascript">
+        function checkEmpty() {
+            let v = document.getElementById("designation").value;
+            let w = document.getElementById("name").value;
+            let x = document.getElementById("id").value;
+            let y = document.getElementById("password").value;
+            let z = document.getElementById("salary").value;
+            if (x == "" || y == "" || z == "") {
+                alert("User Id/Password must not be empty");
+            }
+            location.reload();
+        }
+    </script>
 </body>
+
 </html>
