--- a/Main.html
+++ b/Main.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>BrookField International School</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
     <style>
-
-        .navbar li{
+        .navbar li {
             float: right;
             list-style: none;
             color: white;
-
         }
-
-        .navbar li a{
+        
+        .navbar li a {
             padding: 5px;
             list-style: none;
             color: white;
@@ -23,36 +22,38 @@
         }
     </style>
 </head>
-<body style="background-color:  #000080">
 
-    <div style="height: 140px;width: 100%;background-color: white">
-        <img src="Brookfield+LOGO+clear+copyico.png">
-        <b style="margin-right: 160px;font-size: 50px;color: white">BrookField School</b>
-
+<body style="background-color: #000080">
+    <div style="height: 140px; width: 100%; background-color: white">
+        <img src="Brookfield+LOGO+clear+copyico.png" />
+        <b style="margin-right: 160px; font-size: 50px; color: white">BrookField School</b
+      >
     </div>
 
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
     <header>
-        <nav class="navbar">
-            <ul>
-                <li><h4><a href="facultyLogin.php">Faculty</a></h4></li>
-                <li><h4><a href="#">Contact Us</a></h4></li>
-                <li><h4><a href="Login.php">Admin</a></h4></li>
-                <li><h4><a href="Parent_Login.php">Parental Portal</a></h4></li>
-                <li><h4><a href="Main.html">Home</a></h4></li>
-
-            </ul>
-
-        </nav>
+      <nav class="navbar">
+        <ul>
+          <li>
+            <h4><a href="facultyLogin.php">Faculty</a></h4>
+          </li>
+          <li>
+            <h4><a href="#">Contact Us</a></h4>
+          </li>
+          <li>
+            <h4><a href="Login.php">Admin</a></h4>
+          </li>
+          <li>
+            <h4><a href="Parent_Login.php">Parental Portal</a></h4>
+          </li>
+          <li>
+            <h4><a href="Main.html">Home</a></h4>
+          </li>
+        </ul>
+      </nav>
     </header>
-    <img src="main.jpg" height="600px" width="100%">
-    <img src="b.png" height="450px" width="100%">
-    <img src="c.png" height="450px" width="100%">
-
-
-
-
-
-
-</body>
+    <img src="main.jpg" height="600px" width="100%" />
+    <img src="b.png" height="450px" width="100%" />
+    <img src="c.png" height="450px" width="100%" />
+  </body>
 </html>
