--- a/insert_Parents.html
+++ b/insert_Parents.html
@@ -1,59 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Parents Portal</title>
+    <meta charset="UTF-8" />
+    <title>Parents Portal</title>
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
 </head>
+
 <body style="background-color: white">
+    <div id="login" style="margin-top: 10%">
+        <div class="container">
+            <div id="login-row" class="row justify-content-center align-items-center">
+                <div id="login-column" class="col-md-8">
+                    <div id="login-box" class="col-md-10">
+                        <form id="login-form" class="form" action="insert_parents.php" method="post">
+                            <h1 style="color: black; text-align: center">Parents Portal</h1>
+                            <hr />
+                            <div class="form-group">
+                                <label style="color: darkgreen"><h6 style="color: black">
+                      Student Registration Number
+                    </h6></label
+                  ><br />
+                  <input
+                    type="text"
+                    name="Registration_Number"
+                    class="form-control"
+                    placeholder="22A06Ali"
+                    id="user"
+                  />
+                  <label style="color: darkgreen"
+                    ><h6 style="color: black">Username:</h6></label
+                  ><br />
+                  <input
+                    type="text"
+                    name="Name"
+                    class="form-control"
+                    placeholder="Ali123"
+                    id="name"
+                  />
+                  <label style="color: darkgreen"
+                    ><h6 style="color: black">Password</h6></label
+                  ><br />
+                  <input
+                    type="text"
+                    name="Password"
+                    class="form-control"
+                    id="address"
+                  />
+                </div>
 
-<div id="login" style="margin-top: 10%">
-  <div class="container">
-    <div id="login-row" class="row justify-content-center align-items-center">
-      <div id="login-column" class="col-md-8">
-        <div id="login-box" class="col-md-10">
-          <form id="login-form" class="form" action="insert_parents.php" method="post">
-            <h1 style="color: black;text-align: center">Parents Portal</h1><hr>
-            <div class="form-group">
-              <label  style="color: darkgreen"><h6 style="color: black">Student Registration Number</h6></label><br>
-              <input type="text" name="Registration_Number"  class="form-control" placeholder="22A06Ali" id="user">
-              <label  style="color: darkgreen"><h6 style="color: black">Username:</h6></label><br>
-              <input type="text" name="Name"  class="form-control" placeholder="Ali123" id="name" >
-              <label  style="color: darkgreen"><h6 style="color: black">Password</h6></label><br>
-              <input type="text" name="Password"  class="form-control" id="address" >
+                <div class="form-group">
+                  <input
+                    type="submit"
+                    name="submit"
+                    class="btn badge-secondary"
+                    value="Insert"
+                    onclick="checkEmpty()"
+                  />
+                  <a href="Admin.html"
+                    ><input
+                      type="button"
+                      class="btn badge-secondary"
+                      style="float: right"
+                      value="Back" /></a
+                  ><br /><br />
+                  <a href="delete_parents.html"
+                    ><input
+                      type="button"
+                      class="btn badge-secondary"
+                      style="float: left"
+                      value="Delete"
+                  /></a>
+                  <a href="update_Parents.html"
+                    ><input
+                      type="button"
+                      class="btn badge-secondary"
+                      style="float: right"
+                      value="Update"
+                  /></a>
+                  <a href="View_Parents.php"
+                    ><input
+                      type="button"
+                      class="btn badge-secondary"
+                      style="text-align: center; margin-left: 200px"
+                      value="View "
+                  /></a>
+                  <hr />
+                </div>
+              </form>
             </div>
-
-            <div class="form-group">
-              <input type="submit" name="submit" class="btn badge-secondary" value="Insert" onclick="checkEmpty()">
-              <a href="Admin.html"><input type="button" class="btn badge-secondary" style="float: right" value="Back"></a><br><br>
-              <a href="delete_parents.html"><input type="button" class="btn badge-secondary" style="float: left" value="Delete"></a>
-              <a href="update_Parents.html"><input type="button" class="btn badge-secondary" style="float: right" value="Update"></a>
-              <a href="View_Parents.php"><input type="button" class="btn badge-secondary" style="text-align: center;margin-left: 200px" value="View "></a><hr>
-
-            </div>
-
-
-          </form>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</div>
 
-<script type="text/javascript">
-  function checkEmpty(){
-    let x=document.getElementById("user").value;
-    let y =document.getElementById("name").value;
-    let z =document.getElementById("address").value;
-    if(x=='' || y=='' || z==''){
-      alert("User Id/Password must not be empty");
-
-    }
-
-  }
-</script>
-
-</body>
+    <script type="text/javascript">
+      function checkEmpty() {
+        let x = document.getElementById("user").value;
+        let y = document.getElementById("name").value;
+        let z = document.getElementById("address").value;
+        if (x == "" || y == "" || z == "") {
+          alert("User Id/Password must not be empty");
+        }
+      }
+    </script>
+  </body>
 </html>
