--- a/update-students.html
+++ b/update-students.html
@@ -1,60 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Update Students</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
 </head>
+
 <body>
-
-<div id="login">
-    <h3 class="text-center text-white pt-5" style="color: cornflowerblue">Students Portal</h3>
-    <div class="container">
-        <div id="login-row" class="row justify-content-center align-items-center">
-            <div id="login-column" class="col-md-6">
-                <div id="login-box" class="col-md-12">
-                    <form id="login-form" class="form" action="update_students.php" method="post">
-                        <h3 style="color: darkgreen;text-align: center">Update Records</h3>
-                        <div class="form-group">
-                            <label  style="color: darkgreen">Registration Number:</label><br>
-                            <input type="text" name="id"  class="form-control" id="reg-n">
-                            <label  style="color: darkgreen">Name:</label><br>
-                            <input type="text" name="name"  class="form-control" id="name">
-                            <label  style="color: darkgreen">Address:</label><br>
-                            <input type="text" name="address"  class="form-control" id="address">
-                            <label  style="color: darkgreen">Date of Admission:</label><br>
-                            <input type="date" name="date"  class="form-control"  id="date">
-                        </div>
-
-                        <div class="form-group">
-                            <input type="submit" name="submit" class="btn btn-success" value="update" onclick="checkEmpty()">
-                            <a href="Insert_Student.html"><input type="button" class="btn badge-secondary" style="float: right" value="Back"></a>
-
-                        </div>
-
-
-                    </form>
+    <div id="login">
+        <h3 class="text-center text-white pt-5" style="color: cornflowerblue">
+            Students Portal
+        </h3>
+        <div class="container">
+            <div id="login-row" class="row justify-content-center align-items-center">
+                <div id="login-column" class="col-md-6">
+                    <div id="login-box" class="col-md-12">
+                        <form id="login-form" class="form" action="update_students.php" method="post">
+                            <h3 style="color: darkgreen; text-align: center">
+                                Update Records
+                            </h3>
+                            <div class="form-group">
+                                <label style="color: darkgreen">Registration Number:</label
+                  ><br />
+                  <input
+                    type="text"
+                    name="id"
+                    class="form-control"
+                    id="reg-n"
+                  />
+                  <label style="color: darkgreen">Name:</label><br />
+                                <input type="text" name="name" class="form-control" id="name" />
+                                <label style="color: darkgreen">Address:</label><br />
+                                <input type="text" name="address" class="form-control" id="address" />
+                                <label style="color: darkgreen">Date of Admission:</label
+                  ><br />
+                  <input
+                    type="date"
+                    name="date"
+                    class="form-control"
+                    id="date"
+                  />
                 </div>
+
+                <div class="form-group">
+                  <input
+                    type="submit"
+                    name="submit"
+                    class="btn btn-success"
+                    value="update"
+                    onclick="checkEmpty()"
+                  />
+                  <a href="Insert_Student.html"
+                    ><input
+                      type="button"
+                      class="btn badge-secondary"
+                      style="float: right"
+                      value="Back"
+                  /></a>
+                </div>
+              </form>
             </div>
+          </div>
         </div>
+      </div>
     </div>
-</div>
 
-<script type="text/javascript">
-    function checkEmpty(){
-        let w=document.getElementById("date").value;
-        let x=document.getElementById("reg-n").value;
-        let y =document.getElementById("name").value;
-        let z =document.getElementById("address").value;
-        if(x=='' || y=='' || z=='' ||w==''){
-            alert("User Id/Password must not be empty");
-
+    <script type="text/javascript">
+      function checkEmpty() {
+        let w = document.getElementById("date").value;
+        let x = document.getElementById("reg-n").value;
+        let y = document.getElementById("name").value;
+        let z = document.getElementById("address").value;
+        if (x == "" || y == "" || z == "" || w == "") {
+          alert("User Id/Password must not be empty");
         }
-
-    }
-</script>
-
-</body>
+      }
+    </script>
+  </body>
 </html>
